Fix trigger start button spacing and readonly hover #2303

--- a/src/components/ids-trigger-field/ids-trigger-button.scss
+++ b/src/components/ids-trigger-field/ids-trigger-button.scss
@@ -59,6 +59,7 @@
       &:hover {
         cursor: var(--ids-cursor-default);
         background-color: transparent;
+        border-color: transparent;
       }
     }
   }
