--- a/src/themes/default/ids-theme-default-core.scss
+++ b/src/themes/default/ids-theme-default-core.scss
@@ -1655,6 +1655,7 @@
   // Trigger Field
   --ids-trigger-field-button-border-radius: var(--ids-border-radius-sm);
   --ids-trigger-field-button-margin: -2px;
+  --ids-trigger-field-button-margin-start: 2px;
   --ids-trigger-field-color-background-default: var(--ids-input-color-background-default);
   --ids-trigger-field-color-background-readonly: var(--ids-input-color-background-readonly);
   --ids-trigger-field-color-border-readonly: var(--ids-input-color-border-readonly);
